<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/group_layout_backgroud"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/goup_imageview_profilepic"
        android:layout_width="@dimen/groups_image_width"
        android:layout_height="@dimen/groups_image_height"
        android:background="@drawable/group_person_shape"
        android:contentDescription="@string/group_imageview_description"
        app:srcCompat="@drawable/man" />

    <TextView
        android:id="@+id/group_textview_personname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/groups_username_margintop"
        android:textSize="@dimen/groups_username_textsize"
        android:padding="@dimen/groups_username_padding"
        android:textStyle="bold"
        android:text="@string/group_textview_personname">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/group_textview_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_textview_margin"
            android:padding="@dimen/group_textview_padding"
            android:background="@drawable/group_textview_shape"
            android:textColor="@color/white"
            android:textSize="@dimen/group_textview_textsize"
            android:text="@string/group_textview_pages">

        </TextView>

<!--            3ala2et l 3onsour b 2abo btle2e l attribute fe abla kelmet layout
                exmple: android:layout_margin="10dp"



                3ela2et l 3osnour bel me7tewa ta3elo ma btle2e klmet layout
                exmple: android:padding="8dp"


-->
        <TextView
            android:id="@+id/group_textview_finishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/group_textview_finishes_margin"
            android:padding="@dimen/group_textview_finishes_padding"
            android:background="@drawable/group_textview_shape"
            android:textColor="@color/white"
            android:textSize="@dimen/group_textview_finishes_textsize"
            android:text="@string/group_textview_finishes">

        </TextView>


    </LinearLayout>

    <TextView
        android:id="@+id/group_textview_searchhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/group_textview_searchhint_marginTop"
        android:textSize="@dimen/group_textview_searchhint_textsize"
        android:padding="@dimen/group_textview_searchhint_padding"
        android:textStyle="bold"
        android:text="@string/group_textview_searchhint">

    </TextView>


<!--    android:layout_marginHorizontal="16dp" heye margin mn yamen w l shmeel-->

    <EditText
        android:id="@+id/group_edittext_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/group_edittext_search_marginHorizontal"
        android:layout_marginVertical="@dimen/group_edittext_search_marginVertical"
        android:autofillHints="number of group"
        android:background="@drawable/group_search_shape"
        android:drawablePadding="@dimen/group_edittext_search_drawblepadding"
        android:drawableStart="@drawable/search_interface_symbol"
        android:hint="@string/group_edittext_search_hint"
        android:inputType="number"
        android:padding="@dimen/group_edittext_search_padding"
        android:textColorHint="@color/group_edittext_hintcolor"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize">

    </EditText>

    <TextView
        android:id="@+id/group_textview_hintundersearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/group_textview_hintundersearch_marginHorizontal"
        android:gravity="center"
        android:padding="@dimen/group_textview_hintundersearch_padding"
        android:text="@string/groud_textview_hintundersearch"
        android:textColor="@color/group_edittext_hintcolor"
        android:textSize="@dimen/group_textview_hintundersearch_textSize">

    </TextView>

    <TextView
        android:id="@+id/group_textview_creategroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/group_textview_creategroup_margintop"
        android:gravity="center"
        android:padding="@dimen/group_textview_creategroup_padding"
        android:text="@string/group_textview_creategroup"
        android:textColor="@color/group_textview_creategroup_textcolor"
        android:textSize="@dimen/group_textview_creategroup_textsize">

    </TextView>


</LinearLayout>

